--- a/resources/style.css
+++ b/resources/style.css
@@ -298,15 +298,71 @@ body {
   top: 38%
 }
 
+
+
 .question-pera {
-  margin-left: auto;
-  margin-right: auto;
   
-  color: #000;
-  margin-bottom: 4rem;
-  text-wrap: wrap;
-  font-size: 1.2rem;
+  max-width: 257px !important;
+  
+  font-size: 1rem !important;
+}
+
+.onboarding-pera {
+  font-size: 1rem !important;
+  margin-bottom: 1rem !important;
+}
+
+.menu-button {
+  position: absolute;
+  height: 38px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.menu-button .menu-line-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  grid-gap: 3px;
+}
+.section-header {
   text-align: center;
+  margin: 0 auto;
+  padding: 30px 0;
+  font: 300 60px 'Oswald', sans-serif;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 0px !important;
+}
+.contact-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 50px;
+  position: relative;
+  max-width: 840px;
+  background-color: #fff;
+  border-radius: 20px;
+  gap: 1rem !important;
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 230px !important;
+  height: 400px;
+  perspective: 1000px;
+  margin: 0 auto;
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 230px !important;
+  height: 400px;
 }
 
 }
@@ -454,7 +510,7 @@ h3 {
 
  .creative-testimonial--slider {
   background-image: linear-gradient(to bottom, #f7f7ff, #f4f4fb, #f8f7fc, #fbfbfe, #ffffff);
-  padding: 50px 0px;
+  
 }
 
 .creative-testimonial--slider .testimonial-inner {
@@ -662,9 +718,9 @@ h3 {
 
 @media (max-width: 767px) {
   .bottom-items h3 {
-      font-size:17px;
-      margin: 3px 0
-  }
+    font-size: 17px;
+    margin: 14px 0;
+}
 
   .bottom-items p {
       font-size: 13px
@@ -685,6 +741,7 @@ h3 {
   .process-wrapper {
       margin: 20px
   }
+ 
 }
 
 /* @media (max-width: 520px) {
@@ -760,10 +817,10 @@ h3 {
 
 /* Responsive Ipad */
 @media only screen and (max-width: 981px) {
-  .creative-testimonial--slider {
+  /* .creative-testimonial--slider {
       padding-left: 10px;
       padding-right: 10px;
-  }
+  } */
 
   .testimonial-inner .testimonial-heading {
       max-width: 100%;
@@ -813,7 +870,9 @@ h3 {
 
 
  /* contact us */
- 
+ #contact{
+  background-color: #d81956;
+ }
  
 .error { 
   color: red; 
@@ -823,18 +882,10 @@ h3 {
 
 
 
- 
- #contact {
-  width: 100%;
-  height: 100%;
-  background: #d81956;
- 
+.container-form {
+  padding: 20px;
 }
 
-.text-form-heading{
-  color: rgb(139, 139, 139);
-  margin-bottom: 2rem;
-}
 .section-header {
   text-align: center;
   margin: 0 auto;
@@ -855,34 +906,36 @@ h3 {
   max-width: 840px;
   background-color: #fff;
   border-radius: 20px;
+  gap: 2rem;
 }
 
 /* Left contact page */
 .form-horizontal {
-  /*float: left;*/
   max-width: 400px;
   font-family: 'Lato';
   font-weight: 400;
+  width: 100%; /* Ensure it takes full width */
 }
 
-.form-control, 
+.form-control,
 textarea {
-  max-width: 400px;
- 
-  color: #fff;
+  width: 100%; /* Ensure inputs take full width */
+  color: #000;
   letter-spacing: 1px;
   margin-bottom: 1rem;
+  padding: 10px;
 }
 
 .send-button {
   margin-top: 15px;
   height: 34px;
-  width: 400px;
+  width: 100%; /* Ensure button takes full width */
   overflow: hidden;
   transition: all .2s ease-in-out;
   background-color: rgb(139, 139, 139);
   border-color: rgb(139, 139, 139);
 }
+
 .btn:hover {
   color: var(--bs-btn-hover-color);
   background-color: #d81956;
@@ -890,7 +943,7 @@ textarea {
 }
 
 .alt-send-button {
-  width: 400px;
+  width: 100%; /* Ensure button takes full width */
   height: 34px;
   transition: all .2s ease-in-out;
 }
@@ -906,11 +959,10 @@ textarea {
   transform: translate3d(0px, -29px, 0px);
 }
 
-
 .direct-contact-container {
   max-width: 400px;
+  width: 100%; /* Ensure it takes full width */
 }
-
 
 .contact-list {
   list-style-type: none;
@@ -933,7 +985,6 @@ textarea {
   margin-left: 62px;
 }
 
-
 .phone {
   margin-left: 56px;
 }
@@ -954,12 +1005,10 @@ textarea {
   transition: all .2s ease-in-out;
 }
 
-.contact-list li:hover{
+.contact-list li:hover {
   color: #d81956;
   transition: all .2s ease-in-out;
 }
-
-
 
 .social-media-list {
   position: relative;
@@ -975,7 +1024,7 @@ textarea {
 }
 
 .social-media-list li {
-  position: relative; 
+  position: relative;
   display: inline-block;
   height: 60px;
   width: 60px;
@@ -984,7 +1033,7 @@ textarea {
   border-radius: 50%;
   color: #fff;
   background-color: rgb(139, 139, 139);
-  cursor: pointer; 
+  cursor: pointer;
   transition: all .2s ease-in-out;
 }
 
@@ -1003,13 +1052,13 @@ textarea {
 }
 
 .social-media-list li:hover {
-  background-color: #d81956; 
+  background-color: #d81956;
 }
 
 .social-media-list li:hover:after {
-  opacity: 1;  
+  opacity: 1;
   transform: scale(1.12);
-  transition-timing-function: cubic-bezier(0.37,0.74,0.15,1.65);
+  transition-timing-function: cubic-bezier(0.37, 0.74, 0.15, 1.65);
 }
 
 .social-media-list li:hover a {
@@ -1024,76 +1073,69 @@ textarea {
 }
 
 hr {
-  border-color: rgba(255,255,255,.6);
+  border-color: rgba(255, 255, 255, .6);
 }
 
-/* Begin Media Queries*/
+/* Begin Media Queries */
 @media screen and (max-width: 850px) {
   .contact-wrapper {
-    display: flex;
-    flex-direction: column;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
   }
   .direct-contact-container, .form-horizontal {
-    margin: 0 auto;
-  }  
-  
+      width: 100%;
+      margin: 0;
+  }
   .direct-contact-container {
-    margin-top: 60px;
-    max-width: 300px;
-  }    
+      margin-top: 30px;
+  }
   .social-media-list li {
-    height: 60px;
-    width: 60px;
-    line-height: 60px;
+      height: 50px;
+      width: 50px;
+      line-height: 50px;
   }
   .social-media-list li:after {
-    width: 60px;
-    height: 60px;
-    line-height: 60px;
+      width: 50px;
+      height: 50px;
+      line-height: 50px;
   }
 }
 
 @media screen and (max-width: 569px) {
-
-  .direct-contact-container, .form-wrapper {
-    float: none;
-    margin: 0 auto;
-  }  
-  .form-control, textarea {
-    
-    margin: 0 auto;
+  .form-control,
+  textarea {
+      width: 100%;
   }
- 
-  
-  .name, .email, textarea {
-    width: 280px;
-  } 
-  
+  .direct-contact-container,
+  .form-horizontal {
+      width: 100%;
+      margin: 0 auto;
+  }
   .direct-contact-container {
-    margin-top: 60px;
-    max-width: 280px;
-  }  
-  .social-media-list {
-    left: 0;
+      margin-top: 20px;
   }
   .social-media-list li {
-    height: 55px;
-    width: 55px;
-    line-height: 55px;
-    font-size: 2rem;
+      height: 45px;
+      width: 45px;
+      line-height: 45px;
   }
   .social-media-list li:after {
-    width: 55px;
-    height: 55px;
-    line-height: 55px;
+      width: 45px;
+      height: 45px;
+      line-height: 45px;
   }
-  
 }
 
 @media screen and (max-width: 410px) {
   .send-button {
-    width: 99%;
+      width: 100%;
   }
 }
-
  /* contact us */
+
+
+
+
+
+ 
