--- a/resources/style.css
+++ b/resources/style.css
@@ -12,7 +12,7 @@ body {
   }
 
   .nav-container{
-    padding: 10px 20px;
+    padding: 5px 20px;
   }
 
 
@@ -280,9 +280,7 @@ body {
     font-size: 8rem;
 }
 
-.nav-container{
-  padding: 10px 30px;
-}
+
 .rev-text {
   transition: transform 0.5s ease-in-out;
   overflow: hidden;
@@ -354,7 +352,7 @@ body {
 .flip-card {
   background-color: transparent;
   width: 300px !important;
-  height: 400px;
+  height: 350px !important;
   perspective: 1000px;
   margin: 0 auto;
 }
@@ -362,7 +360,13 @@ body {
 .flip-card-front, .flip-card-back {
   position: absolute;
   width: 300px !important;
-  height: 400px;
+  height: 350px !important;
+}
+
+.flip-card-front img {
+  max-width: 100%;
+  height: 350px !important;
+  object-fit: cover;
 }
 
 }
