--- a/resources/style.css
+++ b/resources/style.css
@@ -230,9 +230,10 @@ body {
   
 
   /* cta button  */
-  .cta-btn {
+  .btn-2 {
     font-weight: 600;
     font-size: 1.2rem;
+    cursor: pointer;
     color: rgb(0, 0, 0);
     outline: none;
     border: none;
@@ -244,7 +245,42 @@ body {
     padding: 13px 44px;
     border-radius: 31px;
     position: absolute;
+
   }
+
+
+  .specific-button {
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .specific-button::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: #d81956;
+    transition: left 0.3s ease-out;
+   
+  }
+  
+  .specific-button:hover::before {
+    left: 0;
+  }
+  
+  .specific-button:active::before {
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+  
+  .specific-button span {
+    position: relative;
+    z-index: 1;
+    color: #fff;
+  }
+  
   /* cta button  */
 
   /* media query 768px divice */
@@ -296,8 +332,6 @@ body {
   top: 38%
 }
 
-
-
 .question-pera {
   
   max-width: 257px !important;
@@ -309,6 +343,12 @@ body {
   font-size: 1rem !important;
   margin-bottom: 1rem !important;
 }
+
+.second-jounery{
+  display: flex;
+  flex-direction: column-reverse;
+ }
+
 
 .menu-button {
   position: absolute;
@@ -508,7 +548,25 @@ h3 {
 }
 
  /* feature */
+ 
+ /* journey */
+ .jquery-title{
+    font-size: 20px;
+    font-family: Verdana, sans-serif;
+    font-weight: bold;
+    color: #000;
+ }
 
+ .left-image img{
+  max-width: 100%;
+  height: auto;
+ }
+
+ .right-content{
+  padding-top: 5rem;
+ }
+ 
+ /* journey */
 
  /* testimonilas */
 
@@ -709,16 +767,6 @@ h3 {
 
 
 
-/* @media (max-width: 991px) {
-  .border-before:before {
-      left:44%;
-      top: 50%
-  }
-
-  .process-wrapper {
-      margin: 20px
-  }
-} */
 
 @media (max-width: 767px) {
   .bottom-items h3 {
@@ -1357,6 +1405,12 @@ hr {
 .newsletter-1 button[type=submit]:hover {
   background: #d81956;
 }
+
+.contact-icon{
+  color: rgb(139, 139, 139);
+}
+
+
 @media (max-width: 768px) {
   .newsletter-1 form {
       flex-direction: column;
